Editing app.config and Web.config
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40173

--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -22,7 +22,8 @@
       <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging>
-  <connectionStrings configSource="ConnectionStrings.config"/>
+  
+  <connectionStrings configSource="ConnectionStrings.config">
     <!--<add name="TOneV2DBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev;User ID=Development;Password=dev!123"/>
     <add name="TOneCDRDBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="TOneAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev_Analytics;User ID=Development;Password=dev!123"/>
@@ -33,8 +34,9 @@
     <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=TOneQueueDB;User ID=sa; Password=p@ssw0rd" />
     <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneV2Dev_#WorkflowType#_#DatabaseId#;user id=development;password=dev!123"/>
     <add name="IVSwitchCDRDBConnString" connectionString="Server=192.168.110.185;Database=ustn_cdrs;Userid=postgres;Password=postgres;" />
-    <add name="MainDBConnString" connectionString=""/>
-  </connectionStrings>-->
+    <add name="MainDBConnString" connectionString=""/>-->
+  </connectionStrings>
+  
   <appSettings file="appSettings.config">
     <add key="Web_ExtendedModulesNames" value="WhS_AccountBalance,VR_AccountBalance,VR_Notification,WhS_TOneV1Transition,NP_IVSwitch"/>
     <!-- , separated module names to include in web bundle (e.g. Common,VR_Notification,VRInvoice) -->
@@ -93,6 +95,7 @@
 
     <add key="ExposedConnectionStringNames" value="TOneCDRDBConnString,TOneAnalyticsDBConnString,IVSwitchCDRDBConnString"/>
   </appSettings>
+  
   <system.web>
     <httpHandlers>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
