--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -85,7 +85,8 @@
       <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
     </exceptionLoggers>
   </vanriseLogging> 
-  <connectionStrings configSource="ConnectionStrings.config"/>
+  
+  <connectionStrings configSource="ConnectionStrings.config">
     <!--<add name="TOneV2DBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev;User ID=Development;Password=dev!123"/>
     <add name="TOneCDRDBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev_CDR;User ID=Development;Password=dev!123"/>
     <add name="TOneAnalyticsDBConnString" connectionString="Server=192.168.110.185;Database=TOneV2_Dev_Analytics;User ID=Development;Password=dev!123"/>
@@ -97,8 +98,8 @@
     <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneV2Dev_#WorkflowType#_#DatabaseId#;user id=development;password=dev!123"/>
     <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=TOneConfiguration;User ID=Development;Password=dev!123"/>
     <add name="MainDBConnString" connectionString=""/>
-    <add name="TOneV1RoutingDBConnString" connectionString="Server=localhost;Database=TOne_RoutingDB;User ID=sa;Password= "/>
-  </connectionStrings>-->
+    <add name="TOneV1RoutingDBConnString" connectionString="Server=localhost;Database=TOne_RoutingDB;User ID=sa;Password= "/>-->
+  </connectionStrings>
 
   <!-- BEGIN CUSTOMER VARYING SECTION -->
   <appSettings file="appSettings.config">
