Add new key Routing_TOne_Testing
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40175

--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -159,14 +159,11 @@
     <add key="Queue_NbOfMaxConcurrentActivators_Default" value="10"/>
     <add key="Queue_NbOfMaxConcurrentActivators_UpdateSummaryQueueActivator" value="30" />
     <add key="Queue_ConsecutiveItemsToProcess" value="5"/>
-    <!--<add key="RoutingDBDataFileDirectory" value=""/>-->
-    <!--RoutingDBDataFileDirectory key will override the SQL default directory if needed-->
-    <!--<add key="RoutingDBLogFileDirectory" value=""/>-->
-    <!--RoutingDBLogFileDirectory key will override the SQL default directory if needed-->
-    <!--<add key="Routing_TOneV1" value="false"/>-->
-    <!--Routing_TOneV1 key if set to true will be used to build only current TOne route and route option tables. in this case Routing_TOneV1_FileGroup key should be used too-->
-    <!--<add key="Routing_TOneV1_FileGroup" value="Primary"/>-->
-    <!-- this key is used with Routing_TOneV1-->
+    <!--<add key="RoutingDBDataFileDirectory" value=""/>--><!--RoutingDBDataFileDirectory key will override the SQL default directory if needed-->
+    <!--<add key="RoutingDBLogFileDirectory" value=""/>--><!--RoutingDBLogFileDirectory key will override the SQL default directory if needed-->
+    <!--<add key="Routing_TOneV1" value="false"/>--><!--Routing_TOneV1 key if set to true will be used to build only current TOne route and route option tables. in this case Routing_TOneV1_FileGroup key should be used too-->
+    <!--<add key="Routing_TOneV1_FileGroup" value="Primary"/>--><!-- this key is used with Routing_TOneV1-->
+    <!--<add key="Routing_TOne_Testing" value ="true"/>--><!--when set to true, process will not build indexes and add ruleId field in route and route options tables in current TOne DB-->
     <add key="TOneV1RoutingDBConnStringKey" value="TOneV1RoutingDBConnString"/>
 
     <!--USE THIS KEY ONLY IF THE ROUTING PROCESS IS USED TO GENERATE CUSTOMER ROUTE FOR CURRENT TONE (TONE V1). Enable this option to link customer to sale zone services directly since there is no routing product in current TOne.-->
