--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -68,6 +68,16 @@
           <runtimeService name="Big Data Runtime Service" type="Vanrise.Common.Business.BigDataRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
         </runtimeServices>
       </runtimeServiceGroup>
+      <runtimeServiceGroup name="group8" nbOfRuntimeInstances="1">
+        <runtimeServices>
+          <runtimeService name="Data Grouping Distributor Runtime Service" type="Vanrise.Common.Business.DataGroupingDistributorRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
+        </runtimeServices>
+      </runtimeServiceGroup>
+      <runtimeServiceGroup name="group9" nbOfRuntimeInstances="3">
+        <runtimeServices>
+          <runtimeService name="Data Grouping Executor Runtime Service" type="Vanrise.Common.Business.DataGroupingExecutorRuntimeService, Vanrise.Common.Business" interval="00:00:02"></runtimeService>
+        </runtimeServices>
+      </runtimeServiceGroup>
     </runtimeServiceGroups>
   </vanriseRuntime>
   
