--- a/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
+++ b/Vanrise/Code/Vanrise.AccountBalance.Entities/Vanrise.AccountBalance.Entities.csproj
@@ -116,6 +116,10 @@
       <Project>{4ab1e86a-c33a-4fd4-bd00-6c5b12f5f337}</Project>
       <Name>Vanrise.GenericData.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Vanrise.InvToAccBalanceRelation.Entities\Vanrise.InvToAccBalanceRelation.Entities.csproj">
+      <Project>{40e7f748-caef-4dab-a955-e2b62cb5db79}</Project>
+      <Name>Vanrise.InvToAccBalanceRelation.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Notification.Entities\Vanrise.Notification.Entities.csproj">
       <Project>{f58cc66a-3bc4-49ed-9143-d1abb031c242}</Project>
       <Name>Vanrise.Notification.Entities</Name>
