adding needed classes for aletlevel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40228

--- a/Vanrise/Code/Vanrise.Notification.Entities/Vanrise.Notification.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Entities/Vanrise.Notification.Entities.csproj
@@ -61,6 +61,11 @@
     <Compile Include="BalanceAlertRule\IVREntityBalanceInfo.cs" />
     <Compile Include="BalanceAlertRule\VRBalanceUpdateLastAlertInfoPayload.cs" />
     <Compile Include="BalanceAlertRule\VRBalanceUpdateRuleInfoPayload.cs" />
+    <Compile Include="VRAlertLevel\VRAlertLevel.cs" />
+    <Compile Include="VRAlertLevel\VRAlertLevelDetail.cs" />
+    <Compile Include="VRAlertLevel\VRAlertLevelInfo.cs" />
+    <Compile Include="VRAlertLevel\VRAlertLevelInfoFilter.cs" />
+    <Compile Include="VRAlertLevel\VRAlertLevelQuery.cs" />
     <Compile Include="VRNotificationType\IVRNotificationTypeIsMatchedContext.cs" />
     <Compile Include="VRAction\VRActionDefinitionFilter.cs" />
     <Compile Include="VRAction\VRActionDefinitionConfig.cs" />
