--- a/Vanrise/Code/Vanrise.Notification.Data.SQL/Vanrise.Notification.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Notification.Data.SQL/Vanrise.Notification.Data.SQL.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VRAlertLevelDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VRAlertRuleDataManager.cs" />
     <Compile Include="VRAlertRuleTypeDataManager.cs" />
