Added skeleton for making financial account as business entity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40239

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Business/TOne.WhS.AccountBalance.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Business/TOne.WhS.AccountBalance.Business.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="AccountBalanceManager.cs" />
     <Compile Include="AccountBalanceSettings.cs" />
+    <Compile Include="FinancialAccountBESettings.cs" />
     <Compile Include="FinancialAccountDefinitionManager.cs" />
     <Compile Include="FinancialAccountManager.cs" />
     <Compile Include="IAccountTypeInfoFilter\FinancialAccountTypeFilter.cs" />
